# rules_xlsynth

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  DESIGN.md  MODULE.bazel  README.md  artifact_resolution_test.py  download_release.py  download_release_test.py  dslx_fmt.bzl  dslx_prove_quickcheck_test.bzl  dslx_provider.bzl  dslx_stitch_pipeline.bzl  dslx_test.bzl  dslx_to_ir.bzl  dslx_to_pipeline.bzl  dslx_to_pipeline_eco.bzl  dslx_to_sv_types.bzl  env_helpers.bzl  env_helpers.py  env_helpers_test.py  extensions.bzl  external_bundle_exports_test.py  helpers.bzl  ir_prove_equiv_test.bzl  ir_provider.bzl  ir_to_delay_info.bzl  ir_to_gates.bzl  make_env_helpers.py  make_env_helpers_test.py  materialize_xls_bundle.py  registered_toolchain_smoke.py  rules.bzl  run_presubmit.py  sha256sum_test.bzl  trusted_identity_boundary_test.bzl  xls_toolchain.bzl  xlsynth-versions.toml  xlsynth_runner.py
.github/workflows/: ci.yml
config/: BUILD.bazel
examples/workspace_toolchain_local_dev/: BUILD.bazel  MODULE.bazel  README.md  smoke.x
examples/workspace_toolchain_smoke/: BUILD.bazel  MODULE.bazel
sample/: BUILD.bazel  imported.x  imported_pkg.golden.sv  pipeline_stages.x  pipeline_stages_pipeline.golden.sv  pipeline_stages_pipeline_flop_inputs.golden.v  pipeline_stages_pipeline_flop_outputs.golden.sv  pipeline_stages_pipeline_flop_outputs.golden.v  pipeline_stages_pipeline_with_valid_reset.golden.sv  pipeline_stages_pipeline_with_valid_reset.golden.v  reversed_struct_ordering.x  reversed_struct_ordering_pkg.golden.sv  sample.x  sample_main_sv.golden.sv  sample_main_sv.opt.golden.ir  sample_main_sv.unopt.golden.ir  sample_main_sv_no_data_reset.golden.sv  sample_main_sv_noflops.golden.sv  sample_src_test.x
sample_disabling_warning/: BUILD.bazel  main.x  main_pipeline.golden.sv
sample_expecting_dslx_path/: BUILD.bazel  add_mol_pipeline.golden.sv  main.x
sample_expecting_dslx_path/subdir/: BUILD.bazel
sample_failing_quickcheck/: BUILD.bazel  failing_quickcheck.x  simple_dependency_a.x  simple_dependency_b.x  simple_dependency_common.x
sample_invariant_assertions/: BUILD.bazel  array_match.x
sample_nonequiv_ir/: BUILD.bazel  add_one.ir  add_one_and_zero.ir  add_two.ir
sample_stitch_expecting_dslx_path/: BUILD.bazel  imported.x  pipeline_stages.x
sample_stitch_expecting_dslx_path/subdir/: BUILD.bazel  another.x
sample_stitch_invariant_assertions/: BUILD.bazel  stages.x
sample_type_inference_v2/: BUILD.bazel  slice_at_limit.x
sample_with_formats/: BUILD.bazel  gate_assert_minimal.x  gate_assert_sv.golden.sv
