load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "make_env_helpers_test",
    srcs = ["make_env_helpers_test.py"],
    data = [
        "env_helpers.bzl",
        "env_helpers.py",
        "make_env_helpers.py",
    ],
)

py_test(
    name = "env_helpers_test",
    srcs = [
        "env_helpers.py",
        "env_helpers_test.py",
    ],
)

py_test(
    name = "artifact_resolution_test",
    srcs = [
        "artifact_resolution_test.py",
        "materialize_xls_bundle.py",
    ],
)

py_test(
    name = "download_release_test",
    srcs = [
        "download_release.py",
        "download_release_test.py",
    ],
)

genrule(
    name = "stdlib_location_probe",
    srcs = ["@rules_xlsynth_selftest_xls//:dslx_stdlib"],
    outs = ["stdlib_location.txt"],
    cmd = "printf '%s\\n' '$(location @rules_xlsynth_selftest_xls//:dslx_stdlib)' > $@",
)

genrule(
    name = "bundle_alias_probe",
    srcs = ["@rules_xlsynth_selftest_xls//:rules_xlsynth_selftest_xls"],
    outs = ["bundle_alias_locations.txt"],
    cmd = "printf '%s\\n' '$(locations @rules_xlsynth_selftest_xls//:rules_xlsynth_selftest_xls)' > $@",
)

py_test(
    name = "external_bundle_exports_test",
    srcs = ["external_bundle_exports_test.py"],
    data = [
        ":bundle_alias_probe",
        ":stdlib_location_probe",
        "@rules_xlsynth_selftest_xls//:rules_xlsynth_selftest_xls",
        "@rules_xlsynth_selftest_xls//:dslx_stdlib",
    ],
    deps = ["@rules_python//python/runfiles"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)
