module(name = "rules_xlsynth")

bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "rules_cc", version = "0.2.11")
bazel_dep(name = "rules_python", version = "1.0.0")

xls = use_extension("//:extensions.bzl", "xls", dev_dependency = True)

xls.toolchain(
    name = "rules_xlsynth_selftest_xls",
    xls_version = "0.39.0",
    xlsynth_driver_version = "0.36.0",
    artifact_source = "download_only",
)

# Mirror the explicit override repo name used by the standalone smoke example
# so `bazel test //...` from the repo root can still analyze that package.
xls.toolchain(
    name = "workspace_override_xls",
    xls_version = "0.39.0",
    xlsynth_driver_version = "0.36.0",
    artifact_source = "download_only",
)

use_repo(
    xls,
    "rules_xlsynth_selftest_xls_runtime",
    "rules_xlsynth_selftest_xls_toolchain",
    "workspace_override_xls_runtime",
    "workspace_override_xls_toolchain",
)
register_toolchains(
    "@rules_xlsynth_selftest_xls_toolchain//:all",
    dev_dependency = True,
)
