# SPDX-License-Identifier: Apache-2.0

# Sample BUILD file
# This example shows how to use the dslx_library and dslx_test rules

load("//:rules.bzl", "dslx_library", "dslx_test", "dslx_fmt_test", "dslx_to_sv_types",
     "dslx_to_pipeline", "dslx_to_ir")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

dslx_library(
    name = "imported",
    srcs = ["imported.x"],
)

dslx_test(
    name = "imported_test",
    deps = [":imported"],
)

dslx_to_sv_types(
    name = "imported_pkg",
    deps = [":imported"],
)

diff_test(
    name = "imported_pkg_test",
    file1 = ":imported_pkg",
    file2 = ":imported_pkg.golden.sv",
)

dslx_library(
    name = "sample",
    srcs = ["sample.x"],
    deps = [":imported"],
)

dslx_to_ir(
    name = "sample_ir",
    deps = [":sample"],
    top = "main",
)

build_test(
    name = "sample_ir_test",
    targets = [":sample_ir"],
)

dslx_test(
    name = "sample_test",
    deps = [":sample"],
)

# -- one-stage pipeline w/valid signals

dslx_to_pipeline(
    name = "sample_main_sv",
    deps = [":sample"],
    delay_model = "asap7",
    pipeline_stages = 1,
    input_valid_signal = "input_valid",
    output_valid_signal = "output_valid",
    top = "main",
)

diff_test(
    name = "sample_main_sv_test",
    file1 = ":sample_main_sv",
    file2 = ":sample_main_sv.golden.sv",
)

# -- no flops on input/output

dslx_to_pipeline(
    name = "sample_main_sv_noflops",
    deps = [":sample"],
    delay_model = "asap7",
    pipeline_stages = 1,
    flop_inputs = False,
    flop_outputs = False,
    module_name = "noflops",
    top = "main",
)

diff_test(
    name = "sample_main_sv_noflops_test",
    file1 = ":sample_main_sv_noflops",
    file2 = ":sample_main_sv_noflops.golden.sv",
)

# -- formatting test

dslx_fmt_test(
    name = "dslx_fmt_test",
    srcs = glob(["*.x"]),
)
