# SPDX-License-Identifier: Apache-2.0

# Sample BUILD file
# This example shows how to use the dslx_library and dslx_test rules

load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load(
    "//:rules.bzl",
    "dslx_fmt_test",
    "dslx_library",
    "dslx_prove_quickcheck_test",
    "dslx_stitch_pipeline",
    "dslx_test",
    "dslx_to_ir",
    "dslx_to_pipeline",
    "dslx_to_sv_types",
    "ir_prove_equiv_test",
    "ir_to_delay_info",
    "ir_to_gates",
    "mangle_dslx_name",
)

dslx_library(
    name = "imported",
    srcs = ["imported.x"],
)

dslx_test(
    name = "imported_test",
    deps = [":imported"],
)

dslx_to_sv_types(
    name = "imported_pkg",
    sv_enum_case_naming_policy = "unqualified",
    deps = [":imported"],
)

# Prove the explicit bundle override path on a supported leaf rule.
dslx_to_sv_types(
    name = "imported_pkg_explicit_bundle",
    sv_enum_case_naming_policy = "unqualified",
    xls_bundle = "@rules_xlsynth_selftest_xls//:bundle",
    deps = [":imported"],
)

diff_test(
    name = "imported_pkg_test",
    file1 = ":imported_pkg",
    file2 = ":imported_pkg.golden.sv",
)

diff_test(
    name = "imported_pkg_explicit_bundle_test",
    file1 = ":imported_pkg_explicit_bundle",
    file2 = ":imported_pkg.golden.sv",
)

dslx_library(
    name = "sample",
    srcs = ["sample.x"],
    deps = [":imported"],
)

dslx_library(
    name = "sample_explicit_bundle",
    srcs = ["sample.x"],
    deps = [":imported"],
    xls_bundle = "@rules_xlsynth_selftest_xls//:bundle",
)

build_test(
    name = "sample_explicit_bundle_typecheck_test",
    targets = [":sample_explicit_bundle"],
)

dslx_to_ir(
    name = "sample_ir",
    lib = ":sample",
    top = "main",
)

dslx_to_ir(
    name = "sample_ir_explicit_bundle",
    lib = ":sample_explicit_bundle",
    top = "main",
    xls_bundle = "@rules_xlsynth_selftest_xls//:bundle",
)

build_test(
    name = "sample_ir_test",
    targets = [":sample_ir"],
)

build_test(
    name = "sample_ir_explicit_bundle_test",
    targets = [":sample_ir_explicit_bundle"],
)

# Prove the unoptimized and optimized IRs are equivalent.
ir_prove_equiv_test(
    name = "sample_ir_prove_equiv_test",
    lhs = ":sample_ir.ir",
    rhs = ":sample_ir.opt.ir",
    top = mangle_dslx_name("sample", "main"),
)

ir_to_delay_info(
    name = "sample_delay_info",
    delay_model = "asap7",
    ir = ":sample_ir",
    top = mangle_dslx_name("sample", "main"),
    # Use the unoptimized IR file just to show a non-trivial path.
    use_unopt_ir = True,
)

build_test(
    name = "sample_delay_info_test",
    targets = [":sample_delay_info"],
)

ir_to_gates(
    name = "sample_gates_analysis",
    ir_src = ":sample_ir",
)

# As above but with fraiging disabled so it runs faster.
ir_to_gates(
    name = "sample_gates_analysis_nofraig",
    fraig = False,
    ir_src = ":sample_ir",
)

build_test(
    name = "sample_gates_analysis_test",
    targets = [":sample_gates_analysis"],
)

dslx_to_ir(
    name = "add_chain_ir",
    lib = ":sample",
    top = "add_chain",
)

ir_to_gates(
    name = "add_chain_gates_analysis",
    ir_src = ":add_chain_ir",
)

build_test(
    name = "add_chain_gates_analysis_test",
    targets = [":add_chain_gates_analysis"],
)

dslx_test(
    name = "sample_test",
    deps = [":sample"],
)

dslx_test(
    name = "sample_explicit_bundle_test",
    deps = [":sample_explicit_bundle"],
    xls_bundle = "@rules_xlsynth_selftest_xls//:bundle",
)

dslx_test(
    name = "sample_src_test",
    src = "sample_src_test.x",
    deps = [":sample"],
)

# -- one-stage pipeline w/valid signals

dslx_to_pipeline(
    name = "sample_main_sv",
    delay_model = "asap7",
    input_valid_signal = "input_valid",
    output_valid_signal = "output_valid",
    pipeline_stages = 1,
    reset = "rst",
    reset_data_path = True,
    top = "main",
    deps = [":sample"],
)

diff_test(
    name = "sample_main_sv_test",
    file1 = ":sample_main_sv",
    file2 = ":sample_main_sv.golden.sv",
)

# -- compare IR artifacts against golden references

diff_test(
    name = "sample_main_sv_unopt_ir_test",
    file1 = ":sample_main_sv.unopt.ir",
    file2 = ":sample_main_sv.unopt.golden.ir",
)

diff_test(
    name = "sample_main_sv_opt_ir_test",
    file1 = ":sample_main_sv.opt.ir",
    file2 = ":sample_main_sv.opt.golden.ir",
)

# Prove the unoptimized and optimized IRs are equivalent.
ir_prove_equiv_test(
    name = "sample_main_sv_ir_prove_equiv_test",
    lhs = ":sample_main_sv.unopt.ir",
    rhs = ":sample_main_sv.opt.ir",
    top = mangle_dslx_name("sample", "main"),
)

# -- variant without data-path reset

dslx_to_pipeline(
    name = "sample_main_sv_no_data_reset",
    delay_model = "asap7",
    input_valid_signal = "input_valid",
    output_valid_signal = "output_valid",
    pipeline_stages = 1,
    reset = "rst",
    reset_data_path = False,
    top = "main",
    deps = [":sample"],
)

diff_test(
    name = "sample_main_sv_no_data_reset_test",
    file1 = ":sample_main_sv_no_data_reset",
    file2 = ":sample_main_sv_no_data_reset.golden.sv",
)

# -- no flops on input/output

dslx_to_pipeline(
    name = "sample_main_sv_noflops",
    delay_model = "asap7",
    flop_inputs = False,
    flop_outputs = False,
    module_name = "noflops",
    pipeline_stages = 1,
    top = "main",
    deps = [":sample"],
)

diff_test(
    name = "sample_main_sv_noflops_test",
    file1 = ":sample_main_sv_noflops",
    file2 = ":sample_main_sv_noflops.golden.sv",
)

# -- formatting test

dslx_fmt_test(
    name = "dslx_fmt_test",
    srcs = glob(["*.x"]),
)

# -- prove quickcheck test

dslx_prove_quickcheck_test(
    name = "sample_prove_quickcheck_test",
    lib = ":sample",
    top = "quickcheck_main",
)

dslx_prove_quickcheck_test(
    name = "sample_prove_quickcheck_explicit_bundle_test",
    lib = ":sample_explicit_bundle",
    top = "quickcheck_main",
    xls_bundle = "@rules_xlsynth_selftest_xls//:bundle",
)

# Pipeline stitching example

dslx_library(
    name = "pipeline_stages_lib",
    srcs = ["pipeline_stages.x"],
)

dslx_stitch_pipeline(
    name = "pipeline_stages_pipeline",
    lib = ":pipeline_stages_lib",
    top = "foo",
)

diff_test(
    name = "pipeline_stages_pipeline_test",
    file1 = ":pipeline_stages_pipeline",
    file2 = ":pipeline_stages_pipeline.golden.v",
)

# -- Pipeline stitching with valid and reset signals (demonstration)

dslx_stitch_pipeline(
    name = "pipeline_stages_pipeline_with_valid_reset",
    input_valid_signal = "input_valid",
    lib = ":pipeline_stages_lib",
    output_valid_signal = "output_valid",
    reset = "rst",
    reset_active_low = False,
    top = "foo",
)

diff_test(
    name = "pipeline_stages_pipeline_with_valid_reset_test",
    file1 = ":pipeline_stages_pipeline_with_valid_reset",
    file2 = ":pipeline_stages_pipeline_with_valid_reset.golden.v",
)

# -- Pipeline stitching with valid/reset signals and flop_inputs only

dslx_stitch_pipeline(
    name = "pipeline_stages_pipeline_flop_inputs",
    flop_inputs = True,
    flop_outputs = False,
    input_valid_signal = "input_valid",
    lib = ":pipeline_stages_lib",
    output_valid_signal = "output_valid",
    reset = "rst",
    stages = ["foo_cycle0"],
    top = "foo",
)

diff_test(
    name = "pipeline_stages_pipeline_flop_inputs_test",
    file1 = ":pipeline_stages_pipeline_flop_inputs",
    file2 = ":pipeline_stages_pipeline_flop_inputs.golden.v",
)

# -- Pipeline stitching with valid/reset signals and flop_outputs only

dslx_stitch_pipeline(
    name = "pipeline_stages_pipeline_flop_outputs",
    flop_inputs = False,
    flop_outputs = True,
    input_valid_signal = "input_valid",
    lib = ":pipeline_stages_lib",
    output_valid_signal = "output_valid",
    reset = "rst",
    stages = ["foo_cycle0"],
    top = "foo",
)

diff_test(
    name = "pipeline_stages_pipeline_flop_outputs_test",
    file1 = ":pipeline_stages_pipeline_flop_outputs",
    file2 = ":pipeline_stages_pipeline_flop_outputs.golden.v",
)
