# SPDX-License-Identifier: Apache-2.0

# Sample BUILD file
# This example shows how to use the dslx_library and dslx_test rules
#
# This particular sample shows how things work when we give a XLSYNTH_DSLX_PATH
# environment variable.

load("//:rules.bzl", "dslx_library", "dslx_test", "dslx_to_pipeline")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")

dslx_library(
    name = "imported",
    srcs = ["imported.x"],
)

dslx_library(
    name = "main",
    srcs = ["main.x"],
    deps = [":imported"],
)

dslx_test(
    name = "main_test",
    deps = [":main"],
    tags = ["manual"],
)

dslx_to_pipeline(
    name = "add_mol_pipeline",
    deps = [":main"],
    top = "add_mol",
    delay_model = "asap7",
    pipeline_stages = 1,
)

diff_test(
    name = "add_mol_pipeline_sv_test",
    file1 = ":add_mol_pipeline",
    file2 = ":add_mol_pipeline.golden.sv",
    tags = ["manual"],
)
