# SPDX-License-Identifier: Apache-2.0

load("//:rules.bzl", "dslx_library", "dslx_test", "dslx_to_ir")

dslx_library(
    name = "slice_at_limit",
    srcs = ["slice_at_limit.x"],
)

dslx_test(
    name = "slice_at_limit_test",
    deps = [":slice_at_limit"],
)

dslx_to_ir(
    name = "slice_at_limit_ir",
    lib = ":slice_at_limit",
    top = "slice_at_limit",
)
