# SPDX-License-Identifier: Apache-2.0

load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load(
    "//:rules.bzl",
    "dslx_library",
    "dslx_to_pipeline",
)

dslx_library(
    name = "gate_assert_minimal",
    srcs = ["gate_assert_minimal.x"],
)

dslx_to_pipeline(
    name = "gate_assert_minimal_sv",
    delay_model = "asap7",
    input_valid_signal = "input_valid",
    output_valid_signal = "output_valid",
    pipeline_stages = 1,
    reset = "rst",
    top = "main",
    deps = [":gate_assert_minimal"],
)

diff_test(
    name = "gate_assert_minimal_sv_test",
    file1 = ":gate_assert_minimal_sv",
    file2 = ":gate_assert_sv.golden.sv",
)
